--- a/Branch.App/Views/Shared/Header.cshtml
+++ b/Branch.App/Views/Shared/Header.cshtml
@@ -1,6 +1,8 @@
-﻿<nav class="navbar navbar-default navbar-static-top" role="navigation">
+﻿@using Branch.App.Helpers.Razor
+<nav class="navbar navbar-default navbar-static-top" role="navigation">
 	<div class="container-fluid">
 		<div class="navbar-header">
+			<img alt="Logo" width="30" height="30" src="@(CdnHelpers.GetAssetLocale(false))Content/Icons/logo-100x100.png" style="float: left; margin-top: 10px; margin-right: 20px;" />
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="icon-bar"></span>
