azure cdn - Fixes #51

--- a/Branch.App/Areas/Halo4/Views/Home/Index.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Home/Index.cshtml
@@ -126,8 +126,8 @@
 </div>
 
 <div class="stats-marketing spacing">
-	<div class="container auntie-dot">
-		
+	<div class="container auntie-dot" style="background-image: url('@CdnHelpers.GetAssetLocale(false)Content/Images/Area/Halo4/auntiediag.png');">
+
 	</div>
 </div>
 
