--- a/Branch.App/Views/Home/Index.cshtml
+++ b/Branch.App/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
 		<ul class="social-media-shit">
 			<li>
 				<!-- NeckbeardHub -->
-				<iframe src="@(CdnHelpers.GetAssetLocale(false))Content/Frames/github-button.html?user=the%20tree&repo=branch&type=watch"
+				<iframe src="@(CdnHelpers.GetAssetLocale(false))Content/Frames/github-button.html?user=TheTree&repo=Branch&type=watch"
 						allowtransparency="true"
 						frameborder="0"
 						scrolling="0"
@@ -33,7 +33,7 @@
 
 			<li>
 				<!-- NeckbeardHub 2 -->
-				<iframe src="@(CdnHelpers.GetAssetLocale(false))Content/Frames/github-button.html?user=the%20tree&repo=branch&type=fork"
+				<iframe src="@(CdnHelpers.GetAssetLocale(false))Content/Frames/github-button.html?user=TheTree&repo=Branch&type=fork"
 						allowtransparency="true"
 						frameborder="0"
 						scrolling="0"
