--- a/Branch.App/Content/Styles/Areas/Halo4/_home.scss
+++ b/Branch.App/Content/Styles/Areas/Halo4/_home.scss
@@ -124,7 +124,8 @@ body.halo4_homepage {
 			padding: 40px 0;
 
 			> .auntie-dot {
-				background: url('../Images/Area/Halo4/auntiediag.png') center no-repeat;
+				background-position: center;
+				background-repeat: no-repeat;
 				background-size: 100px;
 				height: 250px;
 			}
@@ -161,7 +162,9 @@ body.halo4_homepage {
 	}
 
 	&.page-bg-backup-cover {
-		background: url('../Images/Home/Covers/Halo4/cover1.jpg') no-repeat center 0 fixed;
+		background-repeat: no-repeat;
+		background-position: center 0;
+		background-attachment: fixed;
 		background-size: cover;
 		width: 100%;
 		height: 100%;
@@ -169,7 +172,10 @@ body.halo4_homepage {
 		left: 0;
 
 		.page-bg-cover {
-			background: url('../Images/Home/Covers/Halo4/cover1.jpg') no-repeat center 0 fixed;
+			background-repeat: no-repeat;
+			background-position: center 0;
+			background-attachment: fixed;
+			background-size: cover;
 			background-size: cover;
 			width: 100%;
 			min-height: 100%;
