--- a/Branch.App/Content/Styles/Areas/Reach/_home.scss
+++ b/Branch.App/Content/Styles/Areas/Reach/_home.scss
@@ -5,9 +5,6 @@ body.reach {
 		padding: 0;
 		margin: 0;
 		background-attachment: fixed;
-		-webkit-background-size: cover;
-		-moz-background-size: cover;
-		-o-background-size: cover;
 		background-size: cover;
 
 		@media (max-width: 767px) {
@@ -73,9 +70,6 @@ body.reach {
 					height: 321px;
 					width: 300px;
 					background-repeat: no-repeat;
-					-moz-transform: scaleX(-1);
-					-o-transform: scaleX(-1);
-					-webkit-transform: scaleX(-1);
 					transform: scaleX(-1);
 					filter: FlipH;
 					-ms-filter: "FlipH";
@@ -124,7 +118,8 @@ body.reach_homepage {
 			padding: 40px 0;
 
 			> .auntie-dot {
-				background: url('../Images/Area/Halo4/auntiediag.png') center no-repeat;
+				background-repeat: no-repeat;
+				background-position: center;
 				background-size: 100px;
 				height: 250px;
 			}
@@ -157,7 +152,9 @@ body.reach_homepage {
 	}
 
 	&.page-bg-backup-cover {
-		background: url('../Images/Home/Covers/Reach/cover1.jpg') no-repeat center 0 fixed;
+		background-repeat: no-repeat;
+		background-position: center 0;
+		background-attachment: fixed;
 		background-size: cover;
 		width: 100%;
 		height: 100%;
@@ -165,7 +162,9 @@ body.reach_homepage {
 		left: 0;
 
 		.page-bg-cover {
-			background: url('../Images/Home/Covers/Reach/cover1.jpg') no-repeat center 0 fixed;
+			background-repeat: no-repeat;
+			background-position: center 0;
+			background-attachment: fixed;
 			background-size: cover;
 			width: 100%;
 			min-height: 100%;
