--- a/Branch.App/Content/Styles/application.css
+++ b/Branch.App/Content/Styles/application.css
@@ -385,7 +385,8 @@ body.halo4_homepage .stats-marketing {
     margin-bottom: -100px;
     padding: 40px 0; }
     body.halo4_homepage .stats-marketing.spacing > .auntie-dot {
-      background: url('../Images/Area/Halo4/auntiediag.png') center no-repeat;
+      background-position: center;
+      background-repeat: no-repeat;
       background-size: 100px;
       height: 250px; }
   body.halo4_homepage .stats-marketing .central {
@@ -408,14 +409,19 @@ body.halo4_homepage .top-ten {
   text-align: right;
   background-position: left center; }
 body.halo4_homepage.page-bg-backup-cover {
-  background: url('../Images/Home/Covers/Halo4/cover1.jpg') no-repeat center 0 fixed;
+  background-repeat: no-repeat;
+  background-position: center 0;
+  background-attachment: fixed;
   background-size: cover;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0; }
   body.halo4_homepage.page-bg-backup-cover .page-bg-cover {
-    background: url('../Images/Home/Covers/Halo4/cover1.jpg') no-repeat center 0 fixed;
+    background-repeat: no-repeat;
+    background-position: center 0;
+    background-attachment: fixed;
+    background-size: cover;
     background-size: cover;
     width: 100%;
     min-height: 100%;
@@ -1042,9 +1048,6 @@ body.reach .reach-header {
   padding: 0;
   margin: 0;
   background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   background-size: cover; }
   @media (max-width: 767px) {
     body.reach .reach-header {
@@ -1091,9 +1094,6 @@ body.reach .reach-header {
       height: 321px;
       width: 300px;
       background-repeat: no-repeat;
-      -moz-transform: scaleX(-1);
-      -o-transform: scaleX(-1);
-      -webkit-transform: scaleX(-1);
       transform: scaleX(-1);
       filter: FlipH;
       -ms-filter: "FlipH";
@@ -1136,7 +1136,8 @@ body.reach_homepage .stats-marketing {
     margin-bottom: -100px;
     padding: 40px 0; }
     body.reach_homepage .stats-marketing.spacing > .auntie-dot {
-      background: url('../Images/Area/Halo4/auntiediag.png') center no-repeat;
+      background-repeat: no-repeat;
+      background-position: center;
       background-size: 100px;
       height: 250px; }
   body.reach_homepage .stats-marketing .central {
@@ -1155,14 +1156,18 @@ body.reach_homepage .highlight-sector {
 body.reach_homepage .leaderboards {
   text-align: right; }
 body.reach_homepage.page-bg-backup-cover {
-  background: url('../Images/Home/Covers/Reach/cover1.jpg') no-repeat center 0 fixed;
+  background-repeat: no-repeat;
+  background-position: center 0;
+  background-attachment: fixed;
   background-size: cover;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0; }
   body.reach_homepage.page-bg-backup-cover .page-bg-cover {
-    background: url('../Images/Home/Covers/Reach/cover1.jpg') no-repeat center 0 fixed;
+    background-repeat: no-repeat;
+    background-position: center 0;
+    background-attachment: fixed;
     background-size: cover;
     width: 100%;
     min-height: 100%;
